force-app/main/default/objects/GatekeeperAssignment__c/fields/Document_Request_Form_Queue__c.field-meta.xml
<CustomField>
    <fullName>Document_Request_Form_Queue__c</fullName>
    <label>Document Request Form Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RACGlobal_RA</fullName>
            </value>
            <value>
                <fullName>G&amp;CGlobal_RA</fullName>
            </value>
            <value>
                <fullName>PMEMEA_RA</fullName>
            </value>
            <value>
                <fullName>PMEMEA_QA</fullName>
            </value>
            <value>
                <fullName>PMEMEA_TL</fullName>
            </value>
            <value>
                <fullName>PMAPAC_RA</fullName>
            </value>
            <value>
                <fullName>PMAPAC_QA</fullName>
            </value>
            <value>
                <fullName>PMAPAC_TL</fullName>
            </value>
            <value>
                <fullName>PMAMERICA_RA</fullName>
            </value>
            <value>
                <fullName>PMAERICA_QA</fullName>
            </value>
            <value>
                <fullName>PMAMERICA_TL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>