force-app/main/default/objects/GatekeeperAssignment__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I do not see all my accounts</fullName>
            </value>
            <value>
                <fullName>I see accounts that are not mine</fullName>
            </value>
            <value>
                <fullName>The customer grouping is incorrect</fullName>
            </value>
            <value>
                <fullName>The customer group/parent account is missing</fullName>
            </value>
            <value>
                <fullName>I do not see all accounts as part of my Key Account Scope</fullName>
            </value>
            <value>
                <fullName>The ERP listed on the record is incorrect (P2Q)</fullName>
            </value>
            <value>
                <fullName>There is a problem with the product information listed on the record (P2Q)</fullName>
            </value>
            <value>
                <fullName>Missing / Wrong data in my accounts</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>