force-app/main/default/objects/GatekeeperAssignment__c/fields/Manufacturing_Plant__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturing Plant</label>
    <referenceTo>Manufacturing_Plant__c</referenceTo>
    <relationshipLabel>Gatekeeper Assignments</relationshipLabel>
    <relationshipName>Gatekeeper_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>