force-app/main/default/objects/GatekeeperAssignment__c/fields/MarketSegmentation__c.field-meta.xml
<CustomField>
    <fullName>MarketSegmentation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Segmentation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Market_Segmentation__c.Record_Level_1__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.MarketSegmentL1__c</field>
            <operation>equals</operation>
            <valueField>Market_Segmentation__c.MArket_L1__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Market_Segmentation__c</referenceTo>
    <relationshipLabel>Gatekeeper Assignments</relationshipLabel>
    <relationshipName>Gatekeeper_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>