force-app/main/default/objects/GatekeeperAssignment__c/fields/Price_Update_Queue__c.field-meta.xml
<CustomField>
    <fullName>Price_Update_Queue__c</fullName>
    <label>Price Update Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Glomel Back-Office</fullName>
            </value>
            <value>
                <fullName>PriceStorageQueue1</fullName>
            </value>
            <value>
                <fullName>PriceStorageQueue2</fullName>
            </value>
            <value>
                <fullName>ManosTest1</fullName>
            </value>
            <value>
                <fullName>Irshaad</fullName>
            </value>
            <value>
                <fullName>Default Queue</fullName>
            </value>
            <value>
                <fullName>AR_Imerys_Minerales_Argentina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>