force-app/main/default/objects/GatekeeperAssignment__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quality affairs</fullName>
            </value>
            <value>
                <fullName>Regulatory affairs (SDS, compliance documents, etc)</fullName>
            </value>
            <value>
                <fullName>Technical data sheet or Technical brochure request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>