force-app/main/default/objects/GatekeeperAssignment__c/fields/Your_Market__c.field-meta.xml
<CustomField>
    <fullName>Your_Market__c</fullName>
    <label>Your Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Your_Market</valueSetName>
    </valueSet>
</CustomField>