force-app/main/default/objects/GatekeeperAssignment__c/validationRules/GKA_VR01_AllPlantsOrPlantNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>GKA_VR01_AllPlantsOrPlantNotBlank</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 

ISBLANK( Imerys_Site_Dispatch__c ), 

(ISPICKVAL(Object__c, &apos;Sample&apos;)),

$User.ByPassValidationRule__c = FALSE
)</errorConditionFormula>
    <errorMessage>Dispatch Site cannot be blank</errorMessage>
</ValidationRule>