force-app/main/default/objects/GatekeeperAssignment__c/validationRules/GKA_VR07_RequestCriterias.validationRule-meta.xml
<ValidationRule>
    <fullName>GKA_VR07_RequestCriterias</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Process__c  , &quot;Request&quot;)

&amp;&amp;

(ISBLANK(TEXT(CSTeamInCharge__c)) &amp;&amp; ISBLANK(GatekeeperAccount__c))

&amp;&amp;

$User.ByPassValidationRule__c = FALSE</errorConditionFormula>
    <errorMessage>You need to select a Gatekeeper Account or a CS Team in Charge to proceed</errorMessage>
</ValidationRule>