force-app/main/default/objects/GatekeeperAssignment__c/validationRules/GKA_VR_ManufacturingPlantNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>GKA_VR_ManufacturingPlantNotBlank</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 

ISBLANK( ImerysManufacturingPlant__c ), 

(ISPICKVAL(Object__c, &apos;Complaint&apos;)),

$User.ByPassValidationRule__c = FALSE
)</errorConditionFormula>
    <errorMessage>Imerys Manufacturing Plant cannot be blank</errorMessage>
</ValidationRule>